// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TitleElements FourthLevelTitleStyle snapshot by default 1`] = `
.c0 {
  font-size: 14px;
}

@media (min-width:767px) {
  .c0 {
    font-size: 16px;
  }
}

<h4
  className="c0"
>
  H4
</h4>
`;

exports[`TitleElements SecondLevelTitleStyle snapshot by default 1`] = `
.c0 {
  font-size: 20px;
}

@media (min-width:767px) {
  .c0 {
    font-size: 22px;
  }
}

<h2
  className="c0"
>
  H2
</h2>
`;

exports[`TitleElements ThirdLevelTitleStyle snapshot by default 1`] = `
.c0 {
  font-size: 16px;
}

@media (min-width:767px) {
  .c0 {
    font-size: 18px;
  }
}

<h3
  className="c0"
>
  H3
</h3>
`;
